--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<commons-io>1.3.1</commons-io>
 		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
+		<spring.version>3.1.2.RELEASE</spring.version>
 	</properties>
 	<packaging>war</packaging>
 	<name>The tutorial2012 Project</name>
@@ -70,6 +71,24 @@
 			<optional>true</optional>
 		</dependency>
 		 -->
+		
+		<!-- Spring 3 dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+	
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
