--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>tutorial</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<properties>
-		<zk.version>6.5.2-SNAPSHOT</zk.version>
+		<zk.version>6.5.1</zk.version>
 		<commons-io>1.3.1</commons-io>
 		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
