--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<properties>
 		<zk.version>6.5.1</zk.version>
-		<commons-io>1.3.1</commons-io>
 		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
 	</properties>
@@ -50,26 +49,6 @@
 			<artifactId>zkplus</artifactId>
 			<version>${zk.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.zkoss.zk</groupId>
-			<artifactId>zhtml</artifactId>
-			<version>${zk.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${commons-io}</version>
-		</dependency>
-		
-		<!-- ZK 5 breeze theme
-		<dependency>
-			<groupId>org.zkoss.theme</groupId>
-			<artifactId>breeze</artifactId>
-			<version>${zk.version}</version>
-			<optional>true</optional>
-		</dependency>
-		 -->
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
@@ -144,4 +123,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<url>http://gitlab.potix.com:3000/tutorial2012</url>
+	</scm>
 </project>
