--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,8 @@
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"> 
 
-	<description><![CDATA[ZK Tutorial]]></description>
-	<display-name>ZK Tutorial</display-name>
+	<description><![CDATA[ZK Essentials]]></description>
+	<display-name>ZK Essentials</display-name>
 
 	<!-- ZK -->
 	<listener>
