--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zkoss</groupId>
-	<artifactId>essentials</artifactId>
+	<artifactId>zkessentials</artifactId>
 	<version>1.0.0</version>
 	<properties>
 		<zk.version>8.5.0-Eval</zk.version>
